// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckoutProgressTracker /> @renders should render the correct steps for a guest checkout user 1`] = `
<ProgressTracker
  steps={
    Array [
      Object {
        "active": false,
        "title": "Delivery",
        "url": "/guest/checkout/delivery",
      },
      Object {
        "active": true,
        "title": "Payment",
        "url": "/guest/checkout/payment",
      },
      Object {
        "active": false,
        "title": "Thank You",
      },
    ]
  }
/>
`;

exports[`<CheckoutProgressTracker /> @renders should render the correct steps for a new user 1`] = `
<ProgressTracker
  steps={
    Array [
      Object {
        "active": false,
        "title": "Delivery",
        "url": "/checkout/delivery",
      },
      Object {
        "active": true,
        "title": "Payment",
        "url": "/checkout/payment",
      },
      Object {
        "active": false,
        "title": "Thank You",
      },
    ]
  }
/>
`;

exports[`<CheckoutProgressTracker /> @renders should render the correct steps for a returning user 1`] = `
<ProgressTracker
  steps={
    Array [
      Object {
        "active": true,
        "title": "Delivery and Payment",
        "url": "/checkout/delivery-payment",
      },
      Object {
        "active": false,
        "title": "Thank You",
      },
    ]
  }
/>
`;
